--- a/package.json
+++ b/package.json
@@ -1,23 +1,12 @@
 {
-  "name": "nuxt-app",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
-  },
-  "dependencies": {
-    "nuxt": "^3.11.2",
-    "vue": "^3.4.21",
-    "vue-router": "^4.3.0",
-    "@formkit/nuxt": "latest",
-    "@formkit/icons": "latest",
-    "@formkit/core": "latest",
-    "@formkit/vue": "latest",
-    "@formkit/themes": "latest",
-    "@nuxtjs/tailwindcss": "latest"
-  }
+    "name": "next3-starter-template",
+    "scripts": {
+        "packages": "dotenv -- pnpm --filter",
+        "app": "pnpm packages @next3-starter-template/app",
+        "dev": "dotenv -- pnpm -r dev",
+        "build": "dotenv -- pnpm -r build"
+    },
+    "devDependencies": {
+        "dotenv-cli": "^7.4.0"
+    }
 }
