--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -2,7 +2,11 @@
   "name": "base",
   "private": true,
   "type": "module",
-  "dependencies": {
+  "devDependencies": {
+    "@formkit/core": "^1.6.2",
+    "@formkit/nuxt": "^1.6.2",
+    "@formkit/vue": "^1.6.2",
+    "@formkit/icons": "^1.6.2",
     "@nuxtjs/tailwindcss": "^6.12.0",
     "nuxt": "^3.11.2",
     "vue": "^3.4.21",
