--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -4,9 +4,10 @@
   "type": "module",
   "devDependencies": {
     "@formkit/core": "^1.6.2",
+    "@formkit/icons": "^1.6.2",
     "@formkit/nuxt": "^1.6.2",
     "@formkit/vue": "^1.6.2",
-    "@formkit/icons": "^1.6.2",
+    "@nuxtjs/color-mode": "^3.4.1",
     "@nuxtjs/tailwindcss": "^6.12.0",
     "nuxt": "^3.11.2",
     "vue": "^3.4.21",
